PB-428: Added endpoints to stac and fixed wms

--- a/packages/ppbgdi/data_stream/service_stac_logs/elasticsearch/ingest_pipeline/url-path.yml
+++ b/packages/ppbgdi/data_stream/service_stac_logs/elasticsearch/ingest_pipeline/url-path.yml
@@ -9,7 +9,7 @@ processors:
   - grok:
       field: url.path
       patterns:
-        # Patterns are based on the API documentation: https://api3.geo.admin.ch/services/sdiservices.html
+        # Patterns are based on the API documentation: https://sys-data.dev.bgdi.ch/api/stac/static/spec/v0.9/apitransactional.html
         # In order to set the endpoint names by a following processor, each pattern in the list below
         # must only match one specific endpoint.
         - '^/api/stac/%{STAC_VERSION}$' # landing_page
@@ -29,6 +29,11 @@ processors:
         - '^/api/stac/get-token$' # get_token
         - '^/checker$' # checker
         - '^/metrics$' # metrics
+        - '^/api/stac/static/style/logo-CH.svg$' # api_style_logo
+        - '^/api/stac/static/style/style.css$' # api_style_css
+        - '^/api/stac/static/spec/%{STAC_VERSION}/apitransactional.html$' # api_spec_transactional
+        - '^/api/stac/static/spec/%{STAC_VERSION}/openapi.yaml$' # api_spec_openapi
+        - '^/api/stac/static/spec/%{STAC_VERSION}/api.html$' # api_spec
         - '^/api/stac/admin' # admin
       pattern_definitions:
         STAC_VERSION: "v(?<ppbgdi.app.api.version>[0-9]([.][0-9])*)"
@@ -74,7 +79,13 @@ processors:
           - get_token # POST
           - checker # GET
           - metrics # GET
+          - api_style_logo # GET
+          - api_style_css # GET
+          - api_spec_transactional
+          - api_spec_openapi
+          - api_spec
           - admin
+
       if: ctx?.temp_endpoint_index != null
   - dot_expander:
       description: Convert ppbgdi.app.endpoint.id into an object field
