PB-428: Added saved searches

--- a/packages/ppbgdi/data_stream/service_stac_logs/elasticsearch/ingest_pipeline/url-path.yml
+++ b/packages/ppbgdi/data_stream/service_stac_logs/elasticsearch/ingest_pipeline/url-path.yml
@@ -29,11 +29,7 @@ processors:
         - '^/api/stac/get-token$' # get_token
         - '^/checker$' # checker
         - '^/metrics$' # metrics
-        - '^/api/stac/static/style/logo-CH.svg$' # api_style_logo
-        - '^/api/stac/static/style/style.css$' # api_style_css
-        - '^/api/stac/static/spec/%{STAC_VERSION}/apitransactional.html$' # api_spec_transactional
-        - '^/api/stac/static/spec/%{STAC_VERSION}/openapi.yaml$' # api_spec_openapi
-        - '^/api/stac/static/spec/%{STAC_VERSION}/api.html$' # api_spec
+        - '^/api/stac/static' # static
         - '^/api/stac/admin' # admin
       pattern_definitions:
         STAC_VERSION: "v(?<ppbgdi.app.api.version>[0-9]([.][0-9])*)"
@@ -79,11 +75,7 @@ processors:
           - get_token # POST
           - checker # GET
           - metrics # GET
-          - api_style_logo # GET
-          - api_style_css # GET
-          - api_spec_transactional
-          - api_spec_openapi
-          - api_spec
+          - static # GET
           - admin
 
       if: ctx?.temp_endpoint_index != null
