PB-428: Added remaining python logs

--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/elastic-package-test.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/elastic-package-test.yml
@@ -15,7 +15,7 @@ processors:
   - script:
       lang: painless
       description: This script removes the 'elastic-package-test' tag for cleaner expected log
-      inline: ctx?.tags.removeIf(item -> item == 'elastic-package-test')
+      source: ctx?.tags.removeIf(item -> item == 'elastic-package-test')
 
 on_failure:
   - set:
