--- a/packages/ppbgdi/data_stream/python_logs/routing_rules.yml
+++ b/packages/ppbgdi/data_stream/python_logs/routing_rules.yml
@@ -2,8 +2,13 @@
 # based on service-name.
 - source_dataset: ppbgdi.python_logs
   rules:
-    - target_dataset: ppbgdi.service_wmts_logs
-      if: ctx?.service?.name != null && ctx?.service?.name == 'service-wmts'
+    - target_dataset: ppbgdi.mf_chsdi3_logs
+      if: ctx?.service?.name != null && ctx?.service?.name == 'mf-chsdi3'
+      namespace:
+        - "{{data_stream.namespace}}"
+        - default
+    - target_dataset: ppbgdi.service_alti_logs
+      if: ctx?.service?.name != null && ctx?.service?.name == 'service_alti'
       namespace:
         - "{{data_stream.namespace}}"
         - default
@@ -12,8 +17,8 @@
       namespace:
         - "{{data_stream.namespace}}"
         - default
-    - target_dataset: ppbgdi.mf_chsdi3_logs
-      if: ctx?.service?.name != null && ctx?.service?.name == 'mf-chsdi3'
+    - target_dataset: ppbgdi.service_wmts_logs
+      if: ctx?.service?.name != null && ctx?.service?.name == 'service-wmts'
       namespace:
         - "{{data_stream.namespace}}"
         - default
