--- a/packages/ppbgdi/data_stream/python_logs/routing_rules.yml
+++ b/packages/ppbgdi/data_stream/python_logs/routing_rules.yml
@@ -8,12 +8,57 @@
         - "{{data_stream.namespace}}"
         - default
     - target_dataset: ppbgdi.service_alti_logs
-      if: ctx?.service?.name != null && ctx?.service?.name == 'service_alti'
+      if: ctx?.service?.name != null && ctx?.service?.name == 'service-alti'
+      namespace:
+        - "{{data_stream.namespace}}"
+        - default
+    - target_dataset: ppbgdi.service_atom_inspire_logs
+      if: ctx?.service?.name != null && ctx?.service?.name == 'service-atom-inspire'
+      namespace:
+        - "{{data_stream.namespace}}"
+        - default
+    - target_dataset: ppbgdi.service_bod_logs
+      if: ctx?.service?.name != null && ctx?.service?.name == 'service-bod'
+      namespace:
+        - "{{data_stream.namespace}}"
+        - default
+    - target_dataset: ppbgdi.service_feedback_logs
+      if: ctx?.service?.name != null && ctx?.service?.name == 'service-feedback'
+      namespace:
+        - "{{data_stream.namespace}}"
+        - default
+    - target_dataset: ppbgdi.service_icons_logs
+      if: ctx?.service?.name != null && ctx?.service?.name == 'service-icons'
+      namespace:
+        - "{{data_stream.namespace}}"
+        - default
+    - target_dataset: ppbgdi.service_kml_logs
+      if: ctx?.service?.name != null && ctx?.service?.name == 'service-kml'
+      namespace:
+        - "{{data_stream.namespace}}"
+        - default
+    - target_dataset: ppbgdi.service_qrcode_logs
+      if: ctx?.service?.name != null && ctx?.service?.name == 'service-qrcode'
+      namespace:
+        - "{{data_stream.namespace}}"
+        - default
+    - target_dataset: ppbgdi.service_search_logs
+      if: ctx?.service?.name != null && ctx?.service?.name == 'service-search'
+      namespace:
+        - "{{data_stream.namespace}}"
+        - default
+    - target_dataset: ppbgdi.service_shortlink_logs
+      if: ctx?.service?.name != null && ctx?.service?.name == 'service-shortlink'
       namespace:
         - "{{data_stream.namespace}}"
         - default
     - target_dataset: ppbgdi.service_stac_logs
       if: ctx?.service?.name != null && ctx?.service?.name == 'service-stac'
+      namespace:
+        - "{{data_stream.namespace}}"
+        - default
+    - target_dataset: ppbgdi.service_template_logs
+      if: ctx?.service?.name != null && ctx?.service?.name == 'service-template'
       namespace:
         - "{{data_stream.namespace}}"
         - default
