--- a/packages/ppbgdi/changelog.yml
+++ b/packages/ppbgdi/changelog.yml
@@ -1,4 +1,9 @@
 # newer versions go on top
+- version: "0.3.0"
+  changes:
+    - description: Added remaining python logs
+      type: enhancement
+      link: https://github.com/geoadmin/infra-elastic-integrations/pull/9
 - version: "0.2.1"
   changes:
     - description: Added mf-chsdi3 logs
