--- a/packages/ppbgdi/data_stream/service_search_logs/elasticsearch/ingest_pipeline/common-raw.yml
+++ b/packages/ppbgdi/data_stream/service_search_logs/elasticsearch/ingest_pipeline/common-raw.yml
@@ -1,5 +1,5 @@
 ---
-description: Default pipeline for processing mf-chsdi3 raw logs
+description: Pipeline for processing common service-search raw logs
 processors:
   - append:
       description: "Add information on the log format to tags: E.g. k8s_log_json or k8s_log_raw. Useful for development and debugging"
@@ -9,13 +9,11 @@ processors:
   - grok:
       field: event.original
       patterns:
-        - "^\\[%{TIMESTAMP_ISO8601:@timestamp}\\] \\[%{DATA:log.level}\\] \\[pid/tid %{POSINT:process.pid}/%{POSINT:process.thread.id}\\] \\[%{DATA:log.logger}\\] \\[ID %{NOTSPACE:event.id}\\] %{GREEDYDATA:message}"
-        - "^\\[%{TIMESTAMP_ISO8601:@timestamp}\\] \\[%{DATA:log.level}\\] \\[pid/tid %{POSINT:process.pid}/%{POSINT:process.thread.id}\\] \\[%{DATA:log.logger}\\] \\[ID %{NOTSPACE:event.id} %{GREEDYDATA:message}"
-        - "^\\[%{TIMESTAMP_MF_CHSDI3:temp_timestamp}\\] \\[%{DATA:log.logger}:%{DATA:log.level}\\] \\[pid %{POSINT:process.pid}:tid %{POSINT:process.thread.id}\\] %{GREEDYDATA:message}$"
-        - "^%{GREEDYDATA:message}$" # Default catch-all pattern to deal with crappy log content like '/var/www/vhosts/mf-chsdi3/private/chsdi'
+        - "^\\[%{TIMESTAMP_SPHINX_SEARCH:temp_timestamp}\\] \\[%{POSINT:process.pid}\\] %{GREEDYDATA:message}$"
+        - "^\\[%{TIMESTAMP_SPHINX_SEARCH:temp_timestamp}\\] %{GREEDYDATA:message}$"
+        - "^%{GREEDYDATA:message}$" # Default catch-all pattern to deal with crappy log content like 'rotating index: all indexes done'
       pattern_definitions:
-        TIMESTAMP_MF_CHSDI3: "%{DAY} %{MONTH} %{MONTHDAY} %{TIME} %{YEAR}" # Thu May 02 15:44:34.030551 2024
-      trace_match: true
+        TIMESTAMP_SPHINX_SEARCH: "%{DAY} %{MONTH} %{MONTHDAY} %{TIME} %{YEAR}" # Thu May 02 15:44:34.030551 2024
       ecs_compatibility: v1
       on_failure:
         - set:
@@ -28,14 +26,11 @@ processors:
       field: process.pid
       type: long
       ignore_missing: true
-  - convert:
-      field: process.thread.id
-      type: long
-      ignore_missing: true
   - date:
       field: temp_timestamp
       formats:
-        - EEE MMM dd H:m:s.SSSSSS yyyy
+        - EEE MMM dd H:m:s.SSS yyyy
+      timezone: CET
       if: ctx?.temp_timestamp != null
   - remove:
       field: temp_timestamp
