--- a/packages/ppbgdi/data_stream/service_wms_logs/fields/common-fields.yml
+++ b/packages/ppbgdi/data_stream/service_wms_logs/fields/common-fields.yml
@@ -15,6 +15,9 @@
     - name: language
       type: keyword
       description: The language of the app
+    - name: query_params
+      type: flattened
+      description: The canonical query-parameters of the monitored http request which are not renamed to a specific field yet.
 - name: kubernetes.namespace_labels.*
   type: keyword
   description: Used to set the ppbgdi.app.system field
