--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/url-path.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/url-path.yml
@@ -45,6 +45,7 @@ processors:
         - '^/%{MF_CHSDI3_FAVICON}' # images
         - '^/index.html$' # landing_page
         - '^/releasenotes/' # releasenotes
+        - '^/_sources' # sources
       pattern_definitions:
         MF_CHSDI3_TOPIC: '(?<ppbgdi.app.topic.id>[^/]+)'
         MF_CHSDI3_LAYER: '(?<ppbgdi.app.layer.id>(ch|test)\.[^/]+)' # To avoid problems, assume features start with ch or test. To be improve if exceptions pop up.
@@ -107,6 +108,7 @@ processors:
           - images
           - landing_page
           - releasenotes
+          - sources
       if: ctx?.temp?.endpoint_index != null
   - dot_expander:
       description: Convert ppbgdi.app.endpoint.id into an object field
