--- a/packages/ppbgdi/data_stream/service_stac_logs/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/ppbgdi/data_stream/service_stac_logs/elasticsearch/ingest_pipeline/default.yml
@@ -36,27 +36,40 @@ processors:
       lang: painless
       description: This script processor iterates over the whole document to remove fields with null or empty values.
       source: |
-        void handleMap(Map map) {
+        void handleMap(Map map, Map params) {
           for (def x : map.values()) {
             if (x instanceof Map) {
-                handleMap(x);
+                handleMap(x, params);
             } else if (x instanceof List) {
-                handleList(x);
+                handleList(x, params);
             }
           }
-          map.values().removeIf(v -> v == null || v == '' || (v instanceof Map && v.size() == 0) || (v instanceof List && v.size() == 0));
+          map.values().removeIf(v ->
+            (params['remove_null'] == true && v == null) ||
+            (params['remove_empty_string'] == true && v == '') ||
+            (params['remove_empty_map'] == true && v instanceof Map && v.size() == 0) ||
+            (params['remove_empty_list'] == true && v instanceof List && v.size() == 0));
         }
-        void handleList(List list) {
+        void handleList(List list, Map params) {
           for (def x : list) {
               if (x instanceof Map) {
-                  handleMap(x);
+                  handleMap(x, params);
               } else if (x instanceof List) {
-                  handleList(x);
+                  handleList(x, params);
               }
           }
-          list.removeIf(v -> v == null || v == '' || (v instanceof Map && v.size() == 0) || (v instanceof List && v.size() == 0));
+          list.removeIf(v ->
+            (params['remove_null_value'] == true && v == null) ||
+            (params['remove_empty_string'] == true && v == '') ||
+            (params['remove_empty_map'] == true && v instanceof Map && v.size() == 0) ||
+            (params['remove_empty_list'] == true && v instanceof List && v.size() == 0));
         }
-        handleMap(ctx);
+        handleMap(ctx, params);
+      params:
+        remove_null: true
+        remove_empty_string: false
+        remove_empty_map: true
+        remove_empty_list: true
 
 on_failure:
   - set:
