--- a/packages/ppbgdi/data_stream/service_stac_logs/fields/common-fields.yml
+++ b/packages/ppbgdi/data_stream/service_stac_logs/fields/common-fields.yml
@@ -12,9 +12,8 @@
     - name: epsg
       type: long
       description: The projection type of the layer
-    - name: query_params.*
-      type: object
-      object_type: keyword
+    - name: query_params
+      type: flattened
       description: |
         The canonical query-parameters of the monitored http request.
 - name: http.request.headers.*
