--- a/packages/ppbgdi/data_stream/python_logs/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/ppbgdi/data_stream/python_logs/elasticsearch/ingest_pipeline/default.yml
@@ -86,7 +86,7 @@ processors:
       field: related.hosts
       value: '{{ http.request.headers.x-forwarded-host }}'
       allow_duplicates: false
-      if: 'ctx?.http?.request?.headers?.containsKey("x-forwarded-host")'
+      if: 'ctx?.http?.request?.headers != null && ctx.http.request.headers.containsKey("x-forwarded-host")'
 #   - remove:
 #       field: temp
 #       ignore_missing: true
