--- a/packages/ppbgdi/data_stream/python_logs/fields/common-fields.yml
+++ b/packages/ppbgdi/data_stream/python_logs/fields/common-fields.yml
@@ -21,6 +21,9 @@
 - name: user_agent.device.type
   type: keyword
   description: ECS beta field
+- name: kubernetes.container.name
+  type: keyword
+  description: The name of the kubernetes container
 - name: kubernetes.namespace_labels.*
   type: keyword
   description: Used to set the ppbgdi.app.system field
