PB-428: Fix mf-chsdi3 parsing

--- a/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/url-path.yml
+++ b/packages/ppbgdi/data_stream/mf_chsdi3_logs/elasticsearch/ingest_pipeline/url-path.yml
@@ -46,6 +46,7 @@ processors:
         - '^/index.html$' # landing_page
         - '^/releasenotes/' # releasenotes
         - '^/_sources' # sources
+        - '^%{GREEDYDATA}$' # unknown
       pattern_definitions:
         MF_CHSDI3_TOPIC: '(?<ppbgdi.app.topic.id>[^/]+)'
         MF_CHSDI3_LAYER: '(?<ppbgdi.app.layer.id>(ch|test)\.[^/]+)' # To avoid problems, assume features start with ch or test. To be improve if exceptions pop up.
@@ -109,6 +110,7 @@ processors:
           - landing_page
           - releasenotes
           - sources
+          - unknown
       if: ctx?.temp?.endpoint_index != null
   - dot_expander:
       description: Convert ppbgdi.app.endpoint.id into an object field
