--- a/packages/ppbgdi/changelog.yml
+++ b/packages/ppbgdi/changelog.yml
@@ -1,4 +1,9 @@
 # newer versions go on top
+- version: "0.3.1"
+  changes:
+    - description: Added service-print3 logs
+      type: enhancement
+      link: https://github.com/geoadmin/infra-elastic-integrations/pull/10
 - version: "0.3.0"
   changes:
     - description: Added remaining python logs
