--- a/packages/ppbgdi/changelog.yml
+++ b/packages/ppbgdi/changelog.yml
@@ -1,4 +1,9 @@
 # newer versions go on top
+- version: "0.8.0"
+  changes:
+    - description: Added service-proxy integration
+      type: enhancement
+      link: https://github.com/geoadmin/infra-elastic-integrations/pull/19
 - version: "0.7.9"
   changes:
     - description: Added ppbgdi.kubernetes_apiserver_logs
